updated CTA button text so line height was correct. It fits on one line on mobile now.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -632,16 +632,15 @@ html {
     font-weight: 700;
     text-decoration: none;
     display: inline-block;
-    font-size: 32px;
   }
 
   .prospectus {
     margin: 2rem;
     padding: 1.5rem;
-    background-color: #ff6854;
+    background-color: #F26430;
     border: none;
     border-radius: 8px;
-    color: #353e60;
+    color: #ffffff;
     font-weight: 700;
     text-decoration: none;
     display: inline-block;
